syntax = "proto3";

package storage;

message User {
    string email = 1;
    bytes hex_keys = 2; // Для UserGet - пустое
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    string error = 1; // Если ошибка пустая, то все ОК
}

service Storage {
    rpc UserGet(UserRequest) returns (UserResponse);
    rpc UserCreate(UserRequest) returns (UserResponse);
}